# api-gateway-microservice

./: .env.example  .gitignore  Dockerfile  README.md  api_gateway.py  config.py  docker-compose.yml  pyproject.toml
app/: api_gateway.py  config.py
tests/: test_gateway.py
